Fix test spacing

--- a/style.less
+++ b/style.less
@@ -282,6 +282,7 @@ body {
 		.clearfix();
 
 		.main {
+			margin: 0;
 			float: left;
 			text-align: right;
 			width: @text-width;
